--- a/A2/code_testing.ipynb
+++ b/A2/code_testing.ipynb
@@ -37,6 +37,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip freeze > requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -308,7 +325,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_21176\\1676555569.py:34: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_24564\\1676555569.py:34: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  fare_rules = df_fare_rules.set_index('route_id').T.to_dict()\n"
      ]
     }
@@ -524,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +602,8 @@
     }
    ],
    "source": [
-    "# initialize_datalog()\n",
+    "# Forward Chaining\n",
+    "\n",
     "# Forward chaining for optimal route planning\n",
     "def forward_chaining(start_stop_id, end_stop_id, stop_id_to_include, max_transfers):\n",
     "    \"\"\"\n",
@@ -605,16 +623,13 @@
     "    \"\"\"\n",
     "    paths = []\n",
     "\n",
-    "    # Define OptimalRoute using DirectRoute with start, intermediate (transfer), and end stops\n",
     "    OptimalRoute(R1, R2, stop_id_to_include) <= (\n",
     "        DirectRoute(R1, start_stop_id, stop_id_to_include) & \n",
     "        DirectRoute(R2, stop_id_to_include, end_stop_id)\n",
     "    )\n",
     "\n",
-    "    # Query for optimal routes that satisfy the transfer condition\n",
     "    valid_paths = pyDatalog.ask(f\"OptimalRoute(R1, R2, {stop_id_to_include})\")\n",
     "\n",
-    "    # Process the results if valid paths are found\n",
     "    if valid_paths is not None:\n",
     "        for answer in valid_paths.answers:\n",
     "            route1, route2 = answer[0], answer[1]\n",
@@ -647,6 +662,99 @@
     "              \"Pass\" if check_output(expected_output, actual_output) else f\"Fail (\\n\\n\\nExpected: {expected_output},\\n\\n Got: {actual_output})\")\n",
     "\n",
     "test_forward_chaining()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test backward_chaining (22540, 2573, 4686, 1):  Fail (\n",
+      "\n",
+      "\n",
+      "Expected: [(1407, 4686, 10153)],\n",
+      "\n",
+      " Got: [(10153, 4686, 1407)])\n",
+      "Test backward_chaining (951, 340, 300, 1):  Fail (\n",
+      "\n",
+      "\n",
+      "Expected: [(712, 300, 121), (712, 300, 1211), (712, 300, 37), (712, 300, 387), (712, 300, 49), (712, 300, 10453), (712, 300, 1038), (712, 300, 10433), (712, 300, 1571)],\n",
+      "\n",
+      " Got: [(121, 300, 712), (10453, 300, 712), (1571, 300, 712), (387, 300, 712), (1038, 300, 712), (1211, 300, 712), (10433, 300, 712), (49, 300, 712), (37, 300, 712), (712, 300, 121), (712, 300, 49), (712, 300, 1571), (712, 300, 387), (712, 300, 1038), (712, 300, 10433), (712, 300, 10453), (712, 300, 1211), (712, 300, 37)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Backward Chaining\n",
+    "\n",
+    "# Backward chaining for optimal route planning\n",
+    "def backward_chaining(start_stop_id, end_stop_id, stop_id_to_include, max_transfers):\n",
+    "    \"\"\"\n",
+    "    Perform backward chaining to find optimal routes considering transfers.\n",
+    "\n",
+    "    Args:\n",
+    "        start_stop_id (int): The starting stop ID.\n",
+    "        end_stop_id (int): The ending stop ID.\n",
+    "        stop_id_to_include (int): The stop ID where a transfer occurs.\n",
+    "        max_transfers (int): The maximum number of transfers allowed.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of unique paths (list of tuples) that satisfy the criteria, where each tuple contains:\n",
+    "              - route_id1 (int): The ID of the first route.\n",
+    "              - stop_id (int): The ID of the intermediate stop.\n",
+    "              - route_id2 (int): The ID of the second route.\n",
+    "    \"\"\"\n",
+    "    # Define OptimalRoute for backward chaining\n",
+    "    OptimalRoute(R1, R2, stop_id_to_include) <= (\n",
+    "        DirectRoute(R1, end_stop_id, stop_id_to_include) & \n",
+    "        DirectRoute(R2, stop_id_to_include, start_stop_id)\n",
+    "    )\n",
+    "\n",
+    "    # Query for optimal routes that satisfy the transfer condition for backward chaining\n",
+    "    valid_paths = pyDatalog.ask(f\"OptimalRoute(R1, R2, {stop_id_to_include})\")\n",
+    "    \n",
+    "    paths = []\n",
+    "    if valid_paths is not None:\n",
+    "        # Append the first path directly\n",
+    "        paths.append((valid_paths.answers[0][1], stop_id_to_include, valid_paths.answers[0][0]))\n",
+    "\n",
+    "        # Go through the rest of the results and avoid duplicates\n",
+    "        for i in range(1, len(valid_paths.answers)):\n",
+    "            if valid_paths.answers[i][0] != valid_paths.answers[i - 1][1]:  # Avoid duplicate routes\n",
+    "                paths.append((valid_paths.answers[i][1], stop_id_to_include, valid_paths.answers[i][0]))\n",
+    "\n",
+    "    return paths if paths else []\n",
+    "\n",
+    "\n",
+    "# test = [ ((22540, 2573, 4686, 1), [(10153, 4686, 1407)]), ((951, 340, 300, 1), [(294, 300, 712), (10453, 300, 712), (1211, 300, 712), (1158, 300, 712), (37, 300, 712), (1571, 300, 712), (49, 300, 712), (387, 300, 712), (1206, 300, 712), (1038, 300, 712), (10433, 300, 712), (121, 300, 712)])]\n",
+    "# print('out : ',forward_chaining(951, 340, 300, 1))\n",
+    "test_inputs = {\n",
+    "    \"backward_chaining\": [\n",
+    "        ((2573, 22540, 4686, 1), [(1407, 4686, 10153)]),\n",
+    "        ((340, 951, 300, 1), [(712, 300, 121), (712, 300, 1211), (712, 300, 37), (712, 300, 387),\n",
+    "                              (712, 300, 49), (712, 300, 10453), (712, 300, 1038), (712, 300, 10433),\n",
+    "                              (712, 300, 1571)])\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "def check_output(expected, actual):\n",
+    "    \"\"\"Function to compare expected and actual outputs.\"\"\"\n",
+    "    if isinstance(expected, list) and isinstance(actual, list):\n",
+    "        return sorted(expected) == sorted(actual)  # Ensures order-independent comparison\n",
+    "    return expected == actual  # For non-list types\n",
+    "\n",
+    "def test_backward_chaining():\n",
+    "    for (end_stop, start_stop, via_stop, max_transfers), expected_output in test_inputs[\"backward_chaining\"]:\n",
+    "        actual_output = backward_chaining(start_stop, end_stop, via_stop, max_transfers)\n",
+    "        print(f\"Test backward_chaining ({start_stop}, {end_stop}, {via_stop}, {max_transfers}): \", \n",
+    "              \"Pass\" if check_output(expected_output, actual_output) else f\"Fail (\\n\\n\\nExpected: {expected_output},\\n\\n Got: {actual_output})\")\n",
+    "\n",
+    "\n",
+    "test_backward_chaining()"
    ]
   },
   {
