--- a/A2/code_testing.ipynb
+++ b/A2/code_testing.ipynb
@@ -11,8 +11,7 @@
      "text": [
       "Requirement already satisfied: asttokens==2.4.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 1)) (2.4.1)Note: you may need to restart the kernel to use updated packages.\n",
       "\n",
-      "Collecting attrs==24.2.0 (from -r requirements.txt (line 2))\n",
-      "  Using cached attrs-24.2.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: attrs==24.2.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 2)) (24.2.0)\n",
       "Requirement already satisfied: colorama==0.4.6 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 3)) (0.4.6)\n",
       "Requirement already satisfied: comm==0.2.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 4)) (0.2.2)\n",
       "Requirement already satisfied: contourpy==1.3.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 5)) (1.3.0)\n",
@@ -20,23 +19,19 @@
       "Requirement already satisfied: debugpy==1.8.7 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 7)) (1.8.7)\n",
       "Requirement already satisfied: decorator==5.1.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 8)) (5.1.1)\n",
       "Requirement already satisfied: executing==2.1.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 9)) (2.1.0)\n",
-      "Collecting fastjsonschema==2.20.0 (from -r requirements.txt (line 10))\n",
-      "  Downloading fastjsonschema-2.20.0-py3-none-any.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: fastjsonschema==2.20.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 10)) (2.20.0)\n",
       "Requirement already satisfied: fonttools==4.54.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 11)) (4.54.1)\n",
       "Requirement already satisfied: ipykernel==6.29.5 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 12)) (6.29.5)\n",
       "Requirement already satisfied: ipython==8.29.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 13)) (8.29.0)\n",
       "Requirement already satisfied: jedi==0.19.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 14)) (0.19.1)\n",
-      "Collecting jsonschema==4.23.0 (from -r requirements.txt (line 15))\n",
-      "  Downloading jsonschema-4.23.0-py3-none-any.whl.metadata (7.9 kB)\n",
-      "Collecting jsonschema-specifications==2024.10.1 (from -r requirements.txt (line 16))\n",
-      "  Downloading jsonschema_specifications-2024.10.1-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Requirement already satisfied: jsonschema==4.23.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 15)) (4.23.0)\n",
+      "Requirement already satisfied: jsonschema-specifications==2024.10.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 16)) (2024.10.1)\n",
       "Requirement already satisfied: jupyter_client==8.6.3 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 17)) (8.6.3)\n",
       "Requirement already satisfied: jupyter_core==5.7.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 18)) (5.7.2)\n",
       "Requirement already satisfied: kiwisolver==1.4.7 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 19)) (1.4.7)\n",
       "Requirement already satisfied: matplotlib==3.9.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 20)) (3.9.2)\n",
       "Requirement already satisfied: matplotlib-inline==0.1.7 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 21)) (0.1.7)\n",
-      "Collecting nbformat==5.10.4 (from -r requirements.txt (line 22))\n",
-      "  Using cached nbformat-5.10.4-py3-none-any.whl.metadata (3.6 kB)\n",
+      "Requirement already satisfied: nbformat==5.10.4 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 22)) (5.10.4)\n",
       "Requirement already satisfied: nest-asyncio==1.6.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 23)) (1.6.0)\n",
       "Requirement already satisfied: networkx==3.4.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 24)) (3.4.2)\n",
       "Requirement already satisfied: numpy==2.1.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 25)) (2.1.2)\n",
@@ -56,10 +51,8 @@
       "Requirement already satisfied: pytz==2024.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 39)) (2024.2)\n",
       "Requirement already satisfied: pywin32==308 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 40)) (308)\n",
       "Requirement already satisfied: pyzmq==26.2.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 41)) (26.2.0)\n",
-      "Collecting referencing==0.35.1 (from -r requirements.txt (line 42))\n",
-      "  Downloading referencing-0.35.1-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Collecting rpds-py==0.20.0 (from -r requirements.txt (line 43))\n",
-      "  Downloading rpds_py-0.20.0-cp312-none-win_amd64.whl.metadata (4.2 kB)\n",
+      "Requirement already satisfied: referencing==0.35.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 42)) (0.35.1)\n",
+      "Requirement already satisfied: rpds-py==0.20.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 43)) (0.20.0)\n",
       "Requirement already satisfied: scipy==1.14.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 44)) (1.14.1)\n",
       "Requirement already satisfied: six==1.16.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 45)) (1.16.0)\n",
       "Requirement already satisfied: stack-data==0.6.3 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 46)) (0.6.3)\n",
@@ -67,16 +60,7 @@
       "Requirement already satisfied: tornado==6.4.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 48)) (6.4.1)\n",
       "Requirement already satisfied: traitlets==5.14.3 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 49)) (5.14.3)\n",
       "Requirement already satisfied: tzdata==2024.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 50)) (2024.2)\n",
-      "Requirement already satisfied: wcwidth==0.2.13 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 51)) (0.2.13)\n",
-      "Using cached attrs-24.2.0-py3-none-any.whl (63 kB)\n",
-      "Downloading fastjsonschema-2.20.0-py3-none-any.whl (23 kB)\n",
-      "Downloading jsonschema-4.23.0-py3-none-any.whl (88 kB)\n",
-      "Downloading jsonschema_specifications-2024.10.1-py3-none-any.whl (18 kB)\n",
-      "Using cached nbformat-5.10.4-py3-none-any.whl (78 kB)\n",
-      "Downloading referencing-0.35.1-py3-none-any.whl (26 kB)\n",
-      "Downloading rpds_py-0.20.0-cp312-none-win_amd64.whl (214 kB)\n",
-      "Installing collected packages: fastjsonschema, rpds-py, attrs, referencing, jsonschema-specifications, jsonschema, nbformat\n",
-      "Successfully installed attrs-24.2.0 fastjsonschema-2.20.0 jsonschema-4.23.0 jsonschema-specifications-2024.10.1 nbformat-5.10.4 referencing-0.35.1 rpds-py-0.20.0\n"
+      "Requirement already satisfied: wcwidth==0.2.13 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 51)) (0.2.13)\n"
      ]
     }
    ],
@@ -142,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +352,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_21364\\1676555569.py:34: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_23348\\1676555569.py:34: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  fare_rules = df_fare_rules.set_index('route_id').T.to_dict()\n"
      ]
     }
@@ -524,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +527,7 @@
     "    # Define Datalog predicates\n",
     "    DirectRoute(R, X, Y) <= (\n",
     "        RouteHasStop(R, X) & \n",
-    "        RouteHasStop(R, Y) & (X != Y)\n",
+    "        RouteHasStop(R, Y)\n",
     "    )\n",
     "\n",
     "    # create_kb()  # Populate the knowledge base\n",
@@ -635,25 +619,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test forward_chaining (22540, 2573, 4686, 1):  Fail (\n",
-      "\n",
-      "\n",
-      "Expected: [(10153, 4686, 1407)],\n",
-      "\n",
-      " Got: [(10153, 4686, 1407), (1407, 4686, 10153)])\n",
-      "Test forward_chaining (951, 340, 300, 1):  Fail (\n",
-      "\n",
-      "\n",
-      "Expected: [(1211, 300, 712), (10453, 300, 712), (387, 300, 712), (49, 300, 712), (1571, 300, 712), (37, 300, 712), (1038, 300, 712), (10433, 300, 712), (121, 300, 712)],\n",
-      "\n",
-      " Got: [(1211, 300, 712), (49, 300, 712), (10453, 300, 712), (387, 300, 712), (1571, 300, 712), (121, 300, 712), (1038, 300, 712), (37, 300, 712), (10433, 300, 712), (712, 300, 10433), (712, 300, 387), (712, 300, 121), (712, 300, 1211), (712, 300, 1571), (712, 300, 37), (712, 300, 1038), (712, 300, 49), (712, 300, 10453)])\n"
+      "Test forward_chaining (22540, 2573, 4686, 1):  Pass\n",
+      "Test forward_chaining (951, 340, 300, 1):  Pass\n"
      ]
     }
    ],
@@ -722,35 +696,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test backward_chaining (22540, 2573, 4686, 1):  Fail (\n",
-      "\n",
-      "\n",
-      "Expected: [(1407, 4686, 10153)],\n",
-      "\n",
-      " Got: [(1407, 4686, 10153), (10153, 4686, 1407)])\n",
+      "Test backward_chaining (22540, 2573, 4686, 1):  Pass\n",
       "Test backward_chaining (951, 340, 300, 1):  Fail (\n",
       "\n",
       "\n",
       "Expected: [(712, 300, 121), (712, 300, 1211), (712, 300, 37), (712, 300, 387), (712, 300, 49), (712, 300, 10453), (712, 300, 1038), (712, 300, 10433), (712, 300, 1571)],\n",
       "\n",
-      " Got: [(712, 300, 10453), (712, 300, 49), (712, 300, 1038), (712, 300, 37), (712, 300, 1571), (712, 300, 1211), (712, 300, 121), (712, 300, 387), (712, 300, 10433), (1211, 300, 712), (49, 300, 712), (10453, 300, 712), (387, 300, 712), (1571, 300, 712), (121, 300, 712), (1038, 300, 712), (37, 300, 712), (10433, 300, 712)])\n"
+      " Got: [(712, 300, 121), (712, 300, 10453), (712, 300, 387), (712, 300, 1571), (712, 300, 1211), (712, 300, 37), (712, 300, 1038), (712, 300, 10433), (712, 300, 49), (387, 300, 712), (1038, 300, 712), (10453, 300, 712), (121, 300, 712), (49, 300, 712), (1211, 300, 712), (1571, 300, 712), (37, 300, 712)])\n"
      ]
     }
    ],
    "source": [
     "# Backward Chaining\n",
     "\n",
-    "# Backward chaining for optimal route planning\n",
-    "def backward_chaining(start_stop_id, end_stop_id, stop_id_to_include, max_transfers):\n",
+    "# Forward chaining for optimal route planning\n",
+    "def backward_chaining(start_stop_id: int,\n",
+    "                     end_stop_id: int,\n",
+    "                     stop_id_to_include: int,\n",
+    "                     max_transfers: int = 1) -> list[tuple[int, int]]:\n",
     "    \"\"\"\n",
-    "    Perform backward chaining to find optimal routes considering transfers.\n",
+    "    Perform forward chaining to find optimal routes considering transfers.\n",
     "\n",
     "    Args:\n",
     "        start_stop_id (int): The starting stop ID.\n",
@@ -760,26 +732,24 @@
     "\n",
     "    Returns:\n",
     "        list: A list of unique paths (list of tuples) that satisfy the criteria, where each tuple contains:\n",
-    "              - route_id1 (int): The ID of the first route.\n",
-    "              - stop_id (int): The ID of the intermediate stop.\n",
-    "              - route_id2 (int): The ID of the second route.\n",
-    "    \"\"\"\n",
-    "    # Define OptimalRoute for backward chaining\n",
-    "    OptimalRoute(R1, R2, stop_id_to_include) <= (\n",
-    "        DirectRoute(R1, end_stop_id, stop_id_to_include) & \n",
-    "        DirectRoute(R2, stop_id_to_include, start_stop_id)\n",
-    "    )\n",
+    "              - route_id (int): The ID of the route.\n",
+    "              - stop_id (int): The ID of the stop.\n",
+    "    \"\"\" \n",
     "\n",
-    "    # Query for optimal routes that satisfy the transfer condition for backward chaining\n",
-    "    valid_paths = pyDatalog.ask(f\"OptimalRoute(R1, R2, {stop_id_to_include})\")\n",
+    "    OptimalRoute(X, Y, Z) <= (DirectRoute(X, start_stop_id, Z) & DirectRoute(Y, Z, end_stop_id))\n",
+    "\n",
+    "    results = OptimalRoute(X, Y, stop_id_to_include)\n",
+    "\n",
+    "    paths = list()\n",
+    "    paths.append((results[0][1], stop_id_to_include, results[0][0]))\n",
+    "    for res in range(1, len(results)):\n",
+    "        if results[res][0] == results[res - 1][1]:\n",
+    "            continue\n",
+    "        else:\n",
+    "            paths.append((results[res][1], stop_id_to_include, results[res][0]))\n",
+    "\n",
+    "    return paths if paths else []\n",
     "    \n",
-    "    paths = []\n",
-    "    if valid_paths:\n",
-    "        for answer in valid_paths.answers:\n",
-    "            route1, route2 = answer[0], answer[1]\n",
-    "            paths.append((route1, stop_id_to_include, route2))\n",
-    "\n",
-    "    return paths\n",
     "\n",
     "# test = [ ((22540, 2573, 4686, 1), [(10153, 4686, 1407)]), ((951, 340, 300, 1), [(294, 300, 712), (10453, 300, 712), (1211, 300, 712), (1158, 300, 712), (37, 300, 712), (1571, 300, 712), (49, 300, 712), (387, 300, 712), (1206, 300, 712), (1038, 300, 712), (10433, 300, 712), (121, 300, 712)])]\n",
     "# print('out : ',forward_chaining(951, 340, 300, 1))\n",
