Forward & Backward Testing works

--- a/A2/code_testing.ipynb
+++ b/A2/code_testing.ipynb
@@ -2,77 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: asttokens==2.4.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 1)) (2.4.1)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "Requirement already satisfied: attrs==24.2.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 2)) (24.2.0)\n",
-      "Requirement already satisfied: colorama==0.4.6 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 3)) (0.4.6)\n",
-      "Requirement already satisfied: comm==0.2.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 4)) (0.2.2)\n",
-      "Requirement already satisfied: contourpy==1.3.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 5)) (1.3.0)\n",
-      "Requirement already satisfied: cycler==0.12.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 6)) (0.12.1)\n",
-      "Requirement already satisfied: debugpy==1.8.7 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 7)) (1.8.7)\n",
-      "Requirement already satisfied: decorator==5.1.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 8)) (5.1.1)\n",
-      "Requirement already satisfied: executing==2.1.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 9)) (2.1.0)\n",
-      "Requirement already satisfied: fastjsonschema==2.20.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 10)) (2.20.0)\n",
-      "Requirement already satisfied: fonttools==4.54.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 11)) (4.54.1)\n",
-      "Requirement already satisfied: ipykernel==6.29.5 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 12)) (6.29.5)\n",
-      "Requirement already satisfied: ipython==8.29.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 13)) (8.29.0)\n",
-      "Requirement already satisfied: jedi==0.19.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 14)) (0.19.1)\n",
-      "Requirement already satisfied: jsonschema==4.23.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 15)) (4.23.0)\n",
-      "Requirement already satisfied: jsonschema-specifications==2024.10.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 16)) (2024.10.1)\n",
-      "Requirement already satisfied: jupyter_client==8.6.3 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 17)) (8.6.3)\n",
-      "Requirement already satisfied: jupyter_core==5.7.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 18)) (5.7.2)\n",
-      "Requirement already satisfied: kiwisolver==1.4.7 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 19)) (1.4.7)\n",
-      "Requirement already satisfied: matplotlib==3.9.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 20)) (3.9.2)\n",
-      "Requirement already satisfied: matplotlib-inline==0.1.7 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 21)) (0.1.7)\n",
-      "Requirement already satisfied: nbformat==5.10.4 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 22)) (5.10.4)\n",
-      "Requirement already satisfied: nest-asyncio==1.6.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 23)) (1.6.0)\n",
-      "Requirement already satisfied: networkx==3.4.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 24)) (3.4.2)\n",
-      "Requirement already satisfied: numpy==2.1.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 25)) (2.1.2)\n",
-      "Requirement already satisfied: packaging==24.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 26)) (24.1)\n",
-      "Requirement already satisfied: pandas==2.2.3 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 27)) (2.2.3)\n",
-      "Requirement already satisfied: parso==0.8.4 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 28)) (0.8.4)\n",
-      "Requirement already satisfied: pillow==11.0.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 29)) (11.0.0)\n",
-      "Requirement already satisfied: platformdirs==4.3.6 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 30)) (4.3.6)\n",
-      "Requirement already satisfied: plotly==5.24.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 31)) (5.24.1)\n",
-      "Requirement already satisfied: prompt_toolkit==3.0.48 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 32)) (3.0.48)\n",
-      "Requirement already satisfied: psutil==6.1.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 33)) (6.1.0)\n",
-      "Requirement already satisfied: pure_eval==0.2.3 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 34)) (0.2.3)\n",
-      "Requirement already satisfied: pyDatalog==0.17.4 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 35)) (0.17.4)\n",
-      "Requirement already satisfied: Pygments==2.18.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 36)) (2.18.0)\n",
-      "Requirement already satisfied: pyparsing==3.2.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 37)) (3.2.0)\n",
-      "Requirement already satisfied: python-dateutil==2.9.0.post0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 38)) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz==2024.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 39)) (2024.2)\n",
-      "Requirement already satisfied: pywin32==308 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 40)) (308)\n",
-      "Requirement already satisfied: pyzmq==26.2.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 41)) (26.2.0)\n",
-      "Requirement already satisfied: referencing==0.35.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 42)) (0.35.1)\n",
-      "Requirement already satisfied: rpds-py==0.20.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 43)) (0.20.0)\n",
-      "Requirement already satisfied: scipy==1.14.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 44)) (1.14.1)\n",
-      "Requirement already satisfied: six==1.16.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 45)) (1.16.0)\n",
-      "Requirement already satisfied: stack-data==0.6.3 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 46)) (0.6.3)\n",
-      "Requirement already satisfied: tenacity==9.0.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 47)) (9.0.0)\n",
-      "Requirement already satisfied: tornado==6.4.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 48)) (6.4.1)\n",
-      "Requirement already satisfied: traitlets==5.14.3 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 49)) (5.14.3)\n",
-      "Requirement already satisfied: tzdata==2024.2 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 50)) (2024.2)\n",
-      "Requirement already satisfied: wcwidth==0.2.13 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from -r requirements.txt (line 51)) (0.2.13)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# %pip install pandas numpy matplotlib plotly networkx pyDatalog\n",
+    "%pip install pandas numpy matplotlib plotly networkx pyDatalog\n",
     "\n",
-    "%pip install -r requirements.txt"
+    "# %pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,18 +286,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_23348\\1676555569.py:34: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
-      "  fare_rules = df_fare_rules.set_index('route_id').T.to_dict()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the Knowledge Base creation\n",
     "create_kb()  # Ensure this line is executed to populate route_to_stops"
@@ -364,17 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All outputs have been written to the 'outputs' directory.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -425,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,23 +388,14 @@
     "        if start_stop in stops and end_stop in stops:\n",
     "            direct_routes.append(route_id)\n",
     "\n",
-    "    return direct_routes\n"
+    "    return direct_routes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test direct_route_brute_force (2573, 1177):  Pass\n",
-      "Test direct_route_brute_force (2001, 2005):  Pass\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Testing Direct Route Brute Force\n",
     "\n",
@@ -508,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,19 +486,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Terms initialized: DirectRoute, RouteHasStop, OptimalRoute\n",
-      "Test query_direct_routes (2573, 1177):  Pass\n",
-      "Test query_direct_routes (2001, 2005):  Pass\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Testing FOL Query Direct Route\n",
     "\n",
@@ -619,18 +524,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test forward_chaining (22540, 2573, 4686, 1):  Pass\n",
-      "Test forward_chaining (951, 340, 300, 1):  Pass\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Forward Chaining\n",
     "\n",
@@ -665,7 +561,10 @@
     "            route1, route2 = answer[0], answer[1]\n",
     "            paths.append((route1, stop_id_to_include, route2))\n",
     "\n",
-    "    return paths\n",
+    "    if paths:\n",
+    "        return paths\n",
+    "    else:\n",
+    "        return []\n",
     "\n",
     "\n",
     "test = [ ((22540, 2573, 4686, 1), [(10153, 4686, 1407)]), ((951, 340, 300, 1), [(294, 300, 712), (10453, 300, 712), (1211, 300, 712), (1158, 300, 712), (37, 300, 712), (1571, 300, 712), (49, 300, 712), (387, 300, 712), (1206, 300, 712), (1038, 300, 712), (10433, 300, 712), (121, 300, 712)])]\n",
@@ -696,33 +595,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test backward_chaining (22540, 2573, 4686, 1):  Pass\n",
-      "Test backward_chaining (951, 340, 300, 1):  Fail (\n",
-      "\n",
-      "\n",
-      "Expected: [(712, 300, 121), (712, 300, 1211), (712, 300, 37), (712, 300, 387), (712, 300, 49), (712, 300, 10453), (712, 300, 1038), (712, 300, 10433), (712, 300, 1571)],\n",
-      "\n",
-      " Got: [(712, 300, 121), (712, 300, 10453), (712, 300, 387), (712, 300, 1571), (712, 300, 1211), (712, 300, 37), (712, 300, 1038), (712, 300, 10433), (712, 300, 49), (387, 300, 712), (1038, 300, 712), (10453, 300, 712), (121, 300, 712), (49, 300, 712), (1211, 300, 712), (1571, 300, 712), (37, 300, 712)])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Backward Chaining\n",
     "\n",
-    "# Forward chaining for optimal route planning\n",
-    "def backward_chaining(start_stop_id: int,\n",
-    "                     end_stop_id: int,\n",
-    "                     stop_id_to_include: int,\n",
-    "                     max_transfers: int = 1) -> list[tuple[int, int]]:\n",
+    "# Backward chaining for optimal route planning\n",
+    "def backward_chaining(start_stop_id, end_stop_id, stop_id_to_include, max_transfers):\n",
     "    \"\"\"\n",
-    "    Perform forward chaining to find optimal routes considering transfers.\n",
+    "    Perform backward chaining to find optimal routes considering transfers.\n",
     "\n",
     "    Args:\n",
     "        start_stop_id (int): The starting stop ID.\n",
@@ -732,24 +614,33 @@
     "\n",
     "    Returns:\n",
     "        list: A list of unique paths (list of tuples) that satisfy the criteria, where each tuple contains:\n",
-    "              - route_id (int): The ID of the route.\n",
-    "              - stop_id (int): The ID of the stop.\n",
-    "    \"\"\" \n",
+    "              - route_id1 (int): The ID of the first route.\n",
+    "              - stop_id (int): The ID of the intermediate stop.\n",
+    "              - route_id2 (int): The ID of the second route.\n",
+    "    \"\"\"\n",
+    "    paths = []\n",
     "\n",
-    "    OptimalRoute(X, Y, Z) <= (DirectRoute(X, start_stop_id, Z) & DirectRoute(Y, Z, end_stop_id))\n",
+    "    OptimalRoute(X, Y, Z) <= (\n",
+    "        DirectRoute(X, start_stop_id, Z) & \n",
+    "        DirectRoute(Y, Z, end_stop_id)\n",
+    "    )\n",
     "\n",
-    "    results = OptimalRoute(X, Y, stop_id_to_include)\n",
+    "    valid_paths = OptimalRoute(X, Y, stop_id_to_include)\n",
     "\n",
-    "    paths = list()\n",
-    "    paths.append((results[0][1], stop_id_to_include, results[0][0]))\n",
-    "    for res in range(1, len(results)):\n",
-    "        if results[res][0] == results[res - 1][1]:\n",
+    "    paths.append((valid_paths[0][1], stop_id_to_include, valid_paths[0][0]))\n",
+    "\n",
+    "    for tmp in range(1, len(valid_paths)):\n",
+    "        route1, route2 = valid_paths[tmp][0], valid_paths[tmp][1]\n",
+    "\n",
+    "        if route1 == route2:\n",
     "            continue\n",
     "        else:\n",
-    "            paths.append((results[res][1], stop_id_to_include, results[res][0]))\n",
+    "            paths.append((route2, stop_id_to_include, route1))\n",
     "\n",
-    "    return paths if paths else []\n",
-    "    \n",
+    "    if paths:\n",
+    "        return paths\n",
+    "    else:\n",
+    "        return []\n",
     "\n",
     "# test = [ ((22540, 2573, 4686, 1), [(10153, 4686, 1407)]), ((951, 340, 300, 1), [(294, 300, 712), (10453, 300, 712), (1211, 300, 712), (1158, 300, 712), (37, 300, 712), (1571, 300, 712), (49, 300, 712), (387, 300, 712), (1206, 300, 712), (1038, 300, 712), (10433, 300, 712), (121, 300, 712)])]\n",
     "# print('out : ',forward_chaining(951, 340, 300, 1))\n",
@@ -765,7 +656,7 @@
     "def check_output(expected, actual):\n",
     "    \"\"\"Function to compare expected and actual outputs.\"\"\"\n",
     "    if isinstance(expected, list) and isinstance(actual, list):\n",
-    "        return sorted(expected) == sorted(actual)  # Ensures order-independent comparison\n",
+    "        return sorted(expected) == sorted(actual)  # Ensutmp order-independent comparison\n",
     "    return expected == actual  # For non-list types\n",
     "\n",
     "def test_backward_chaining():\n",
@@ -788,7 +679,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
