--- a/A2/code_testing.ipynb
+++ b/A2/code_testing.ipynb
@@ -679,7 +679,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
