sampling Priice as well

--- a/A4/Q2/code.ipynb
+++ b/A4/Q2/code.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_38360\\1373968550.py:30: FutureWarning: \n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_38360\\1858679859.py:30: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -568,7 +568,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_38360\\1373968550.py:40: FutureWarning: \n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_38360\\1858679859.py:40: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -587,7 +587,7 @@
     }
    ],
    "source": [
-    "X = train_data.drop(columns=['Price', 'Price_Category', 'Address', 'Possesion', 'Furnishing'])\n",
+    "X = train_data.drop(columns=['Price_Category', 'Address', 'Possesion', 'Furnishing'])\n",
     "y = train_data['Price_Category']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
